Changes for 2.0.15rc1

New features:
...G...PS. [ZBXNEXT-786] made net.tcp.service[ntp] item work over UDP (asaveljevs)
.....J.... [ZBX-8839] added timeout configuration option to Java gateway (asaveljevs)
A.F....... [ZBX-1357] updated Polish translation; thanks to Zabbix translators (Richlv)

Bug fixes:
...G...... [ZBX-9456] fixed sustem.cpu.util item to work correctly on OpenBSD 5.7 (igors)
........S. [ZBX-4529] fixed security vulnerability in alerter script execution by using strong quoting for script arguments; thanks to Pavel for the report (wiper)
.......PS. [ZBX-8299] fixed SQL errors in case a network discovery rule or check is deleted during processing (asaveljevs)
...G...... [ZBX-9467] fixed agent compilation error related to "ifnet" and "ifnet_head" structs on OpenBSD 5.5 and above (asaveljevs)
.......PS. [ZBX-5717] fixed incorrect calculation of icmppingloss[] due to floating-point errors (asaveljevs)
........S. [ZBX-9436] fixed zabbix_server to not exit in case of database connection loss in the middle of transaction (dimir)
........S. [ZBX-9352] fixed execution of remote commands on the server in case trigger expression contains multiple hosts (asaveljevs)
........S. [ZBX-3507] fixed SMS sending with Huawei GSM modems (asaveljevs)
...G...PS. [ZBX-9251] added missing socket closing to avoid large number of opened sockets (igors)
...G...... [ZBX-9410] fixed agent logging to eventlog (syslog option) on Windows (wiper)
..F....... [ZBX-9367] fixed "Status of Zabbix" and "System status" widget default refresh intervals (Ivo)
A......... [ZBX-5656] fixed maintenance.create and maintenance.update methods "timeperiods" parameter to be an array of arrays (Ivo)
....I....T [ZBX-9331] changed value type of system.stat[kthr,*] items in "Template OS AIX" to float and added them to "Performance" application (asaveljevs)
........S. [ZBX-9368] fixed possible SQL errors when linking of several templates (Sasha)